--- a/fast.html
+++ b/fast.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Fast Assimint</title>
     <link rel="icon" href="imeags/colorful-letter-gradient-logo-design_474888-2309.avif">
+   <link rel="style" href="style">
     <style>
         .blogs{
             background-color: antiquewhite;
@@ -18,11 +19,12 @@
      <header class="blogs">Wellcome to my fast website
     im
 </header>
-        <img src="imeags/Software-developer.jpg" alt="dovlopar ">
+        <img src="imeags/Software-developer.jpg" alt="dovlopar "
+        >
        
         <h1>My fast blogs</h1>
         <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut hic odit error animi dolores, totam maiores modi rem ducimus, debitis quasi sit! Laborum, suscipit temporibus ex nihil reprehenderit, exercitationem expedita accusamus dolorem facere voluptates maiores autem natus corrupti quae illo tempore totam similique deleniti, dolores unde libero quo amet enim tenetur. Odio, sint alias iste accusantium animi aliquid deserunt libero voluptatem quis eum itaque ex! Commodi consequatur excepturi explicabo.
+            <i font style="height: 78px;">Lorem ipsum,</i> dolor sit amet consectetur adipisicing elit. Aut hic odit error animi dolores, totam maiores modi rem ducimus, debitis quasi sit! Laborum, suscipit temporibus ex nihil reprehenderit, exercitationem expedita accusamus dolorem facere voluptates maiores autem natus corrupti quae illo tempore totam similique deleniti, dolores unde libero quo amet enim tenetur. Odio, sint alias iste accusantium animi aliquid deserunt libero voluptatem quis eum itaque ex! Commodi consequatur excepturi explicabo.
         </p>
 <body>
     
