--- a/chak box.html
+++ b/chak box.html
@@ -7,10 +7,14 @@
 </head>
 <body>
      <div>
-    <input type="text" name="Name" id="YOUR NAME">
-    <input type="password" name="psaaword" id="your password">
+    <input type="Your name" id="YOUR NAME">
+    <input type="password" id="your password">
+    <input type="checkbox"  >
 
     </div>
+    <nav>
+    </nav>
+    <input type="reset" value="Reset">
     
 </body>
 </html>
