--- a/fast.html
+++ b/fast.html
@@ -26,6 +26,15 @@
         <p>
             <i font style="height: 78px;">Lorem ipsum,</i> dolor sit amet consectetur adipisicing elit. Aut hic odit error animi dolores, totam maiores modi rem ducimus, debitis quasi sit! Laborum, suscipit temporibus ex nihil reprehenderit, exercitationem expedita accusamus dolorem facere voluptates maiores autem natus corrupti quae illo tempore totam similique deleniti, dolores unde libero quo amet enim tenetur. Odio, sint alias iste accusantium animi aliquid deserunt libero voluptatem quis eum itaque ex! Commodi consequatur excepturi explicabo.
         </p>
+        <input type="text" name="" id=""type="pitha" name="pitha" id="citoi">
+        citoi>
+        <input type="pitha" name="pitha" id="citoi">
+        
+        citoi
+        <input type="reset" value="">
+        <textarea name="your" id="namber"></textarea>
+        <input type="date" name="bartday" id="bartday" checked>
+        <input type="email"  name="email" checked>
 <body>
     
 </body>
